--- a/frontend.html
+++ b/frontend.html
@@ -38,12 +38,20 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1914740'>Job Application for Principal Frontend Engineer_Marketing Platform at Coupang</a></h5> 
+<p><span class="badge badge-light">Shanghai</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1924934'>Job Application for 2019 ?? ??? ???? (Front-end / Back-end) at Coupang</a></h5> 
+<p><span class="badge badge-light">Seoul</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698260691-senior-frontend-developer-w-m-d-'>brandung GmbH & Co. KG Senior Frontend Developer (w/m/d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698261654-frontend-entwickler-typo3-w-m-d-'>brandung GmbH & Co. KG Frontend Entwickler - TYPO3 (w/m/d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://www.xing.com/jobs/hamburg-frontend-developer-52201363'>Frontend Developer (m/w/d) in Hamburg | XING Jobs</a></h5> 
@@ -90,7 +98,7 @@
 <p><span class="badge badge-light">Charlotte, NC  Charlotte</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/umlaut/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -188,7 +196,7 @@
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nCp7lMwK'>DNEG Careers - Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nCp7lMwK'>DNEG Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -212,7 +220,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tipico/743999698286014-senior-front-end-developer-m-f-x-'>Tipico Senior Front-End Developer (m/f/x) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Tipico/743999698286014-senior-front-end-developer-m-f-x-'>Tipico Senior Front-End Developer (m/f/x) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">St Julian's, Malta</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -220,7 +228,7 @@
 <p><span class="badge badge-light">Seoul, Korea, Republic of</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://mymusictaste.applytojob.com/apply/trcBgyaNkQ/-Frontend-Engineer'>??????(???) Frontend Engineer - MyMusicTaste - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mymusictaste.applytojob.com/apply/trcBgyaNkQ/-Frontend-Engineer'>??????(???) Frontend Engineer - MyMusicTaste - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -284,7 +292,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -300,7 +308,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698248390-front-end-software-engineer-kms-solutions-'>KMS Technology FRONT-END SOFTWARE ENGINEER (KMS Solutions) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698248390-front-end-software-engineer-kms-solutions-'>KMS Technology FRONT-END SOFTWARE ENGINEER (KMS Solutions) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -412,7 +420,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Z?rich, Switzerland  San Francisco Zurich, Switzerland San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nicesystems/job/o6robfwQ'>NICE Careers - Expert Front-End Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nicesystems/job/o6robfwQ'>NICE Careers - Expert Front-End Software Engineer</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -426,7 +434,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://homeday.join.com/jobs/448364-senior-frontend-engineer-m-w-x'>Job @ Homeday (Berlin): (Senior) Frontend Engineer... | JOIN</a></h5> 
+<h5><a href='https://homeday.join.com/jobs/448364-senior-frontend-engineer-m-w-x'>Job @ Homeday (Berlin): (Senior) Frontend Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -446,15 +454,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://apiax.join.com/jobs/458971-front-end-web-developer'>Job @ Apiax (Lisbon): Front-End Web Developer | JOIN</a></h5> 
-<p><span class="badge badge-light">Lisbon Lisbon, Portugal</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://avency.join.com/jobs/459628-frontend-developer-m-w-d'>Job @ avency (Telgte): Frontend Developer (m/w/d) | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
