--- a/deep-learning.html
+++ b/deep-learning.html
@@ -134,7 +134,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -258,7 +258,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Amsterdam Amsterdam  Amsterdam, Netherlands  Amsterdam</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://www.jobbnorge.no/en/available-jobs/job/176168/phd-research-fellow-in-ict-deep-reinforcement-learning-for-a-chatbot-based-personal-educator'>Phd Research Fellow in ICT - Deep Reinforcement Learning for a Chatbot Based Personal Educator (176168) | University of Agder</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.jobbnorge.no/en/available-jobs/job/176168/phd-research-fellow-in-ict-deep-reinforcement-learning-for-a-chatbot-based-personal-educator'>Phd Research Fellow in ICT - Deep Reinforcement Learning for a Chatbot Based Personal Educator (176168) | University of Agder</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-30</p>
 <hr/>
@@ -373,7 +373,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4428023002'>Job Application for Senior Deep Learning Engineer at Instabase</a></h5> 
+<h5><a href='https://boards.greenhouse.io/instabase/jobs/4428023002'>Job Application for Senior Deep Learning Engineer at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
@@ -402,7 +402,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aquabyte/cdf45de2-9d6f-4ef8-9634-ed305effe990'>Aquabyte - Senior Deep Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aquabyte/cdf45de2-9d6f-4ef8-9634-ed305effe990'>Aquabyte - Senior Deep Learning Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -423,7 +423,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p>1 day ago ... We are offering a career opportunity combining both your passion and skills as a 
 software engineer while also allowing you to work with state-of-the-art?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-09-03</p>
 <hr/>
@@ -478,7 +478,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
@@ -487,7 +487,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p>Aug 7, 2019 ... Developer Technology Intern - AI | Canada, Toronto ? Deep Learning Intern ... 
 Compute Performance Developer Technology Intern - CUDA | Canada, Toronto.</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Research-Scientist-Intern---Deep-Learning_JR1923743'>Research Scientist Intern - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Research-Scientist-Intern---Deep-Learning_JR1923743'>Research Scientist Intern - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 7, 2019 ... We are now looking for a Research Scientist Intern ? Deep Learning. NVIDIA is 
 searching for a world-class researcher to join our research team. We are?...</p>
@@ -512,7 +512,7 @@ vision, speech processing and affective computing. We are interested in hiring a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-13</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
